care/force-app/main/default/objects/Data_Deletion_Rules__mdt/Data_Deletion_Rules__mdt.object-meta.xml
<CustomObject>
    <description>This is created as SFORCE-2107 but is generalized and can be used to prevent access to deletion of certain records in the system.</description>
    <label>Data Deletion Rules</label>
    <pluralLabel>Data_Deletion_Rules</pluralLabel>
</CustomObject>