care/force-app/main/default/objects/Data_Deletion_Rules__mdt/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>Describes the error message to be displayed when user tries to delete with insufficient previleges</description>
    <inlineHelpText>Describes the error message to be displayed when user tries to delete with insufficient previleges</inlineHelpText>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>