care/force-app/main/default/objects/Data_Deletion_Rules__mdt/fields/Override_Data_Deletion__c.field-meta.xml
<CustomField>
    <fullName>Override_Data_Deletion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this check box to override the deletion settings.</description>
    <inlineHelpText>Check this check box to override the deletion settings.</inlineHelpText>
    <label>Override Data Deletion</label>
    <type>Checkbox</type>
</CustomField>