care/force-app/main/default/objects/Data_Deletion_Rules__mdt/fields/Permission_Set_Name__c.field-meta.xml
<CustomField>
    <fullName>Permission_Set_Name__c</fullName>
    <description>Describes the Permission Set name which needs deletion access. To provide multiple values, use the delimiter ;</description>
    <inlineHelpText>Describes the Permission Set name which needs deletion access. To provide multiple values, use the delimiter ;</inlineHelpText>
    <label>Permission Set Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>