care/force-app/main/default/objects/Data_Deletion_Rules__mdt/fields/Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>Profile_Name__c</fullName>
    <description>Describes the profile name which needs deletion access. To provide multiple values, use the delimiter ;</description>
    <inlineHelpText>Mention the profile name which needs deletion access. To provide multiple values, use the delimiter ;</inlineHelpText>
    <label>Profile Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>