care/force-app/main/default/objects/Data_Deletion_Rules__mdt/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <description>Describes the record type of the object to be deleted. To provide multiple values, use the delimiter ;</description>
    <inlineHelpText>Mention the record type of the object to be deleted. To provide multiple values, use the delimiter ;</inlineHelpText>
    <label>Record Type</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>