care/force-app/main/default/objects/Data_Deletion_Rules__mdt/fields/SObject_Name__c.field-meta.xml
<CustomField>
    <fullName>SObject_Name__c</fullName>
    <description>Describes the Object name which needs deletion access.</description>
    <inlineHelpText>Describes the Object name which needs deletion access.</inlineHelpText>
    <label>SObject Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>