care/force-app/main/default/objects/Data_Deletion_Rules__mdt/fields/User_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Name__c</fullName>
    <description>Describes the Username which needs deletion access. To provide multiple values, use the delimiter ;</description>
    <inlineHelpText>Mention the Username which needs deletion access. To provide multiple values, use the delimiter ;</inlineHelpText>
    <label>Username</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>