care/force-app/main/default/objects/Data_Deletion_Rules__mdt/listViews/All_w_Override.listView-meta.xml
<ListView>
    <fullName>All_w_Override</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Override_Data_Deletion__c</columns>
    <columns>SObject_Name__c</columns>
    <columns>Permission_Set_Name__c</columns>
    <columns>Record_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All w Override</label>
    <language>en_US</language>
    <sharedTo>
        <role>SystemAdmin</role>
    </sharedTo>
</ListView>